kube-dev/legacy-metabase.pods.yml
# This is the legacy metabase shim, hosted at `metabase.cpantesters.org`
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-metabase
  namespace: default
  labels:
    app: legacy-metabase
spec:
  selector:
    matchLabels:
      app: legacy-metabase
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: legacy-metabase
      labels:
        app: legacy-metabase
    spec:
      volumes:
        - name: conf-volume
          configMap:
            name: legacy-metabase-conf
            items:
              - key: metabase-conf
                path: metabase.conf
        - name: etc-volume
          configMap:
            name: etc
            items:
              - key: beam-minion
                path: beam-minion.yml
        - name: mysql-secret
          secret:
            secretName: mysql-secret
        - name: metabase-tail-log
          persistentVolumeClaim:
            claimName: metabase-tail-log

      containers:
        - name: legacy-metabase
          image: cpantesters/api:latest
          command:
            - cpantesters-legacy-metabase
            - prefork
            - -w
            - "2"
            - -G
            - "1500"
            - -H
            - "300"
          volumeMounts:
            - mountPath: /etc/app
              name: conf-volume
            - mountPath: /etc/minion
              name: etc-volume
            - mountPath: /etc/secrets
              name: mysql-secret
              readOnly: true
            - mountPath: /data/tail
              name: metabase-tail-log
          resources:
            requests:
              cpu: 0.01
              memory: 250M
            limits:
              cpu: 0.5
              memory: 750M
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: legacy-metabase
  namespace: default
spec:
  selector:
    app: legacy-metabase
  type: NodePort
  ports:
    - name: legacy-metabase
      protocol: TCP
      port: 80
      targetPort: 3000

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: legacy-metabase
  namespace: default
spec:
  rules:
    - host: metabase.cpantesters.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: legacy-metabase
                port:
                  number: 80
